fail_crate/tests/no_bool_after_pub.rs
use inew::New;

#[derive(New)]
#[new(pub =)]
struct B;

fn main() {}
